<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android
    ="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.cs2340.SpaceTrader.views.PlayerConfirmation">

    <TextView
        android:id="@+id/Profile"
        android:layout_width="119dp"
        android:layout_height="49dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="Profile"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="228dp"
        android:layout_height="26dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/player_name_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/difficultyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/difficultyText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/creditsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/creditsText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/creditsText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/shipText"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/difficultyText"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/shipText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/shipText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pilotSkillText"
        app:layout_constraintStart_toStartOf="@+id/creditsText"
        app:layout_constraintTop_toBottomOf="@+id/creditsText"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/pilotSkillText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/pilotSkillText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fighterSkillText"
        app:layout_constraintStart_toStartOf="@+id/shipText"
        app:layout_constraintTop_toBottomOf="@+id/shipText"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/fighterSkillText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/fighterSkillText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/traderSkillText"
        app:layout_constraintStart_toStartOf="@+id/pilotSkillText"
        app:layout_constraintTop_toBottomOf="@+id/pilotSkillText"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:id="@+id/traderSkillText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/traderSkillText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/engineerSkillText"
        app:layout_constraintStart_toStartOf="@+id/fighterSkillText"
        app:layout_constraintTop_toBottomOf="@+id/fighterSkillText"
        app:layout_constraintVertical_bias="0.395" />

    <TextView
        android:id="@+id/engineerSkillText"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/engineerSkillText_blank"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_button"
        app:layout_constraintStart_toStartOf="@+id/traderSkillText"
        app:layout_constraintTop_toBottomOf="@+id/traderSkillText"
        app:layout_constraintVertical_bias="0.452" />

    <Button
        android:id="@+id/game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="Go To Game"
        android:textColor="@color/design_default_color_primary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/engineerSkillText"
        app:layout_constraintTop_toBottomOf="@+id/engineerSkillText" />

</android.support.constraint.ConstraintLayout>